@@ -1,5 +1,5 @@
 module Stratus
   
-  VERSION = "0.3"
+  VERSION = "0.3.1"
   
 end
